--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,10 +27,12 @@ jobs:
       uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
       with:
         arguments: build
+        build-root-directory: target
     - name: List 2 🔍
       run: |
         ls -la 
         ls build
+        ls target
     - name: Upload on Github Action 📂
       uses: actions/upload-artifact@v2
       with:
