fix: revert because ntm fdp

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,14 +23,10 @@ jobs:
     - name: List 1 🔍
       run: |
         ls -la 
-    - name: Cache Gradle packages
-      uses: actions/cache@v1
+    - name: Build with Gradle 🔨
+      uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
       with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
-    - name: Build with Gradle
-      run: ./gradlew build
+        arguments: build
     - name: List 2 🔍
       run: |
         ls -la 
