--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,15 +30,15 @@ jobs:
     - name: List 2 🔍
       run: |
         ls -la 
-        ls build
+        ls app/build/intermediates/apk/debug
     - name: Upload on Github Action 📂
       uses: actions/upload-artifact@v2
       with:
         name: Build
-        path: build
+        path: app/build/intermediates/apk/debug
     - name: Zip build 📕📗📘
       run: |
-        pushd build
+        pushd app/build/intermediates/apk/debug
         zip -r ../build.zip .
         popd
     - name: Release 💸
