--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,13 @@ jobs:
     - name: List 2 🔍
       run: |
         ls -la 
-        ls app/build/intermediates/apk/debug
+        ls app
+        cd app
+        ls build 
+        cd build 
+        ls intermediates 
+        cd intermediates
+        ls apk
     - name: Upload on Github Action 📂
       uses: actions/upload-artifact@v2
       with:
