--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
         arguments: build
     - name: List 2 🔍
       run: |
+        ./gradlew assembleDebug
         ls -la 
         ls app
         cd app
