--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,28 +20,21 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-    - name: List 1 🔍
-      run: |
-        ls -la 
     - name: Build with Gradle 🔨
       uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
       with:
         arguments: build
-    - name: Build app release bundle (AAB)
+    - name: Build APK 🔨
       id: buildRelease
       run: ./gradlew assembleRelease
-    - name: List 2 🔍
-      run: |
-        ls -la 
-        ls app/build/outputs/apk/release
     - name: Upload on Github Action 📂
       uses: actions/upload-artifact@v2
       with:
         name: Build
-        path: app/build/intermediates/apk/debug
+        path: app/build/outputs/apk/release
     - name: Zip build 📕📗📘
       run: |
-        pushd app/build/intermediates/apk/debug
+        pushd app/build/outputs/apk/release
         zip -r ../build.zip .
         popd
     - name: Release 💸
